<resources>
    <string name="app_name">ReBel New\'s</string>
    <string name="txt_try">After Splash Activity</string>
    <string name="btn_AfterSplashScA">Start</string>
    <string name="txt_AfterSplashScA">Welcome to our new\'s site</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">MENU</string>
    <string name="txt_sumber">Lihat Lebih Lengkap</string>
    <string name="txt_authorunkwn">Penulis Tidak Diketahui</string>
    <string name="stxt_tgl">24 Januari 2018</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_home_idx">HomeIdx</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainments</string>
    <string name="health">Healths</string>
    <string name="science">Sciences</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="judul">Judul</string>
    <string name="nama_penulis">Nama Penulis</string>
    <string name="tanggal">Tanggal</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="lihat_lebih_lengkap">Lihat lebih lengkap</string>

    <string name="SUAOn">Notification Alarm On!</string>
    <string name="SUAOff">Notification Alarm Off!</string>
    <string name="category">Categories</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="daily_reminder">Daily Reminder</string>


</resources>