<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/business"
            android:title="@string/business"
            android:icon="@drawable/ic_business" />
        <item
            android:id="@+id/entertainment"
            android:title="@string/entertainment"
            android:icon="@drawable/ic_entertainment" />
        <item
            android:id="@+id/health"
            android:title="@string/health"
            android:icon="@drawable/ic_health" />
        <item
            android:id="@+id/science"
            android:title="@string/science"
            android:icon="@drawable/ic_science" />
        <item
            android:id="@+id/sports"
            android:title="@string/sports"
            android:icon="@drawable/ic_sports" />
        <item
            android:id="@+id/technology"
            android:title="@string/technology"
            android:icon="@drawable/ic_technology" />
    </group>

</menu>
